# fovis

./: .gitignore  CMakeLists.txt  Makefile  ProjectHome.md  README  README.md
fovis-analysis/: CMakeLists.txt  README
fovis-analysis/python/: compare.py
fovis-analysis/python/fa/: common.py  quaternion.py  rigid_transform.py
fovis-bot2/: CMakeLists.txt  README
fovis-bot2/kinect-odometry/: CMakeLists.txt  main.cpp
fovis-bot2/lcmtypes/: fovis_param_t.lcm  fovis_stats_t.lcm  fovis_tictoc_t.lcm  fovis_update_t.lcm
fovis-bot2/stereo-odometry/: CMakeLists.txt  main.cpp  stereo-odometry.cpp  stereo-odometry.hpp
libfovis/: CMakeLists.txt  README  README.md  TODO.txt  frame.cpp  internal_utils.hpp  stereo_calibration.cpp  stereo_depth.cpp
libfovis/doc/: Doxyfile
libfovis/doc/content/: main.dox
libfovis/examples/: CMakeLists.txt
libfovis/examples/fv-example-freenect/: README
libfovis/examples/tum-rgbd/: CMakeLists.txt
libfovis/libfovis/: CMakeLists.txt  camera_intrinsics.hpp  depth_source.hpp  feature_match.hpp  feature_matcher.hpp  fovis.hpp  grid_filter.hpp  initial_homography_estimation.cpp  initial_homography_estimation.hpp  intensity_descriptor.hpp  keypoint.hpp  primesense_depth.hpp  rectification.hpp  stereo_depth.cpp  stereo_depth.hpp  stereo_disparity.cpp  stereo_disparity.hpp  visual_odometry.hpp
